Issue #2868348 by tormi, MacSim, NickWilde: Incorrect align with an inline label

--- a/css/color_field_formatter_swatch.css
+++ b/css/color_field_formatter_swatch.css
@@ -1,3 +1,7 @@
+.color_field__swatch {
+  display: inline-block;
+}
+
 .color_field__swatch--circle {
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
